# ollim-bot

./: .coverage  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLA.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: bot-debugger.md  gmail-reader.md
.github/workflows/: ci.yml  cla.yml
docs/: design-philosophy.md  feature-brainstorm.md  philosophy-audit.md  routine-reminder-spec.md  skill-spec.md  webhook-spec.md
docs/plans/: 2026-02-18-configurable-names-design.md  2026-02-18-configurable-names-plan.md  2026-02-18-interactive-forks-design.md  2026-02-18-interactive-forks-plan.md  2026-02-19-discord-permissions-design.md  2026-02-19-discord-permissions-plan.md  2026-02-19-source-indicators-design.md  2026-02-19-source-indicators-plan.md  2026-02-20-interrupt-design.md  2026-02-20-interrupt-plan.md  2026-02-20-session-id-history-design.md  2026-02-20-session-id-history.md  2026-02-21-ping-budget-design.md  2026-02-21-ping-budget-plan.md  2026-02-21-reply-to-fork-design.md  2026-02-21-reply-to-fork-plan.md  2026-02-22-bg-fork-button-resume-design.md  2026-02-22-bg-fork-button-resume.md  2026-02-22-bg-fork-config-design.md  2026-02-22-bg-fork-config-plan.md  2026-02-22-bg-fork-timeouts-design.md  2026-02-22-fork-context-and-updates-fix.md  2026-02-22-quiet-when-busy-design.md  2026-02-22-quiet-when-busy-plan.md  2026-02-22-thinking-command-design.md  2026-02-22-thinking-command-plan.md  2026-02-22-webhook-endpoints-design.md  2026-02-22-webhook-endpoints-plan.md  2026-02-23-per-job-tool-restrictions-design.md  2026-02-23-ping-budget-refill-design.md  2026-02-23-ping-budget-refill-plan.md  2026-02-24-documentation-site-spec.md  2026-02-26-persistent-routine-sessions-design.md  2026-03-01-plugin-marketplace-research.md  2026-03-01-tool-permission-revamp-design.md  2026-03-03-context-audit.md  2026-03-03-ux-audit-report.md
scripts/: migrate_jsonl_to_md.py
src/ollim_bot/: __init__.py  agent.py  agent_context.py  agent_streaming.py  agent_tools.py  auth.py  bot.py  calendar_cmd.py  channel.py  config.py  discord_tools.py  embed_types.py  embeds.py  followups.py  fork_state.py  forks.py  formatting.py  gmail_cmd.py  google_auth.py  hooks.py  inquiries.py  main.py  permissions.py  ping_budget.py  prompts.py  reminder_cmd.py  reminders.py  routine_cmd.py  routines.py  runtime_config.py  schedule_cmd.py  scheduler.py  sessions.py  skills.py  storage.py  streamer.py  subagent_prompts.py  subagents.py  tasks_cmd.py  (+5 more)
tests/: conftest.py  test_agent_streaming.py  test_agent_tools.py  test_bot.py  test_cli.py  test_config.py  test_discord_tools.py  test_embeds.py  test_forks.py  test_formatting.py  test_inquiries.py  test_permissions.py  test_ping_budget.py  test_reminders.py  test_routines.py  test_runtime_config.py  test_scheduler_prompts.py  test_sessions.py  test_skills.py  test_storage.py  test_stream_compact.py  test_streamer.py  test_subagents.py  test_tool_policy.py  test_tool_restrictions.py  test_updater.py  test_webhook.py
(+32 files in other folders)
